# study_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py
agents/audit/: __init__.py  adversarial.py
agents/debate/: __init__.py  panel.py
agents/janitor/: __init__.py  code_janitor.py
core/: __init__.py  auto_merge.py  budget.py  cli_caller.py  deliverable.py  exit_codes.py  health.py  incidents.py  llm.py  path_guard.py  rate_limit.py  schemas.py  session_manager.py  similarity.py  verifier.py
lead/: __init__.py  dashboard.py  mailbox.py  main.py  member.py  registry.py  team_lead.py  timeline.py  workspace.py
lead/prompts/: __init__.py  driver.md  hire_brief.md  (+2 more)
meta/: requirements.md
scripts/: autonomous-agent.service.template  reset.sh  start.sh  status.sh  stop.sh  web-stop.sh  web-venv.sh  web.sh
tests/: conftest.py  test_auto_merge.py  test_budget.py  test_conflict_parallel.py  test_dashboard.py  test_debate_panel.py  test_exit_codes.py  test_health_llm_logs_rotation.py  test_lead.py  test_lead_exit_codes.py  test_lead_resume.py  test_path_guard.py  test_schemas.py  test_similarity_gate.py  test_web_api_budget.py  test_web_api_conflicts.py  test_web_api_debates.py  test_web_api_llm_calls.py  test_web_api_llm_calls_detail.py  test_web_api_members.py  test_web_api_plan.py  test_web_events_stream.py  test_web_server.py  test_web_state_reader.py  test_web_state_reader_conflicts.py  test_web_static_mount.py
tmp/: p4-evaluator-policy.md  p5-isolation-policy.md
web/: __init__.py  events_stream.py  server.py  state_reader.py
(+60 files in other folders)
